--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3> Insert your data</h3>
-    <form action="includes/formhandler.inc.php" method="post">
+    <form action="formhandler.inc.php" method="post">
         <input type="text" name="username" placeholder="Insert Name">
         <br>
         <input type="password" name="pwd" placeholder="Insert password">
