--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br>
         <input type="text" name="email" placeholder="Insert email">
         <br>
-        <button>submit</button>
+        <button>Signup</button>
 
     </form>
     
